@@ -48,6 +48,23 @@ def test_image_cache(tmp_path):
         assert 2 in hic.cache
 
 
+def test_image_cache_index_out_of_range(tmp_path):
+    path = tmp_path / "test.hdf5"
+    size = 20
+    chunk_size = 8
+    with h5py.File(path, "w") as hw:
+        hw["events/image"] = np.random.rand(size, 80, 180)
+    with h5py.File(path, "r") as h5:
+        hic = read.HDF5ImageCache(h5["events/image"],
+                                  chunk_size=chunk_size,
+                                  cache_size=2)
+        # Get something from first chunk. This should just work
+        hic.__getitem__(10)
+        # Now test out-of-bounds error
+        with pytest.raises(IndexError, match="of bounds for HDF5ImageCache"):
+            hic.__getitem__(20)
+
+
 @pytest.mark.parametrize("size, chunks", [(209, 21),
                                           (210, 21),
                                           (211, 22)])
