@@ -2,6 +2,7 @@
  - fix: properly prolagate event extraction keyword arguments
  - fix: QueueCollectorThread used uint16 for enumerating indices
  - enh: reduce thread waiting times
+ - enh: add bounds check for image cache
 0.0.8
  - feat: introduce QueueCollectorThread
  - feat: introduce SegmenterManagerThread
